--- a/practice/slidingmenus/windowstyles.css
+++ b/practice/slidingmenus/windowstyles.css
@@ -1,1 +1,6 @@
 #sitewrap {}
+
+body {
+    /* Font settings for menu */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
